--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
   <link rel="stylesheet" href="/css/style.css">
   <title>Portafolio: Uriel Hernández</title>
 </head>
-<body>
+<body >
   <header class="main">
-    <img src="/images/developer.svg" alt="Ilustración de una persona programando" height="300" srcset="">
-    <h1 class="title">Uriel Hernández</h1>
-    <p class="subtitle">Frontend Dev Jr.</p>
-    <button>Ir a los proyectos</button>
+    <!-- El usuario manda -->
+    <div class="toggle">
+      <img src="/images/sun.png" alt="Ícono del sol" srcset="">
+      <input type="checkbox" name="dark-toggle" id="dark-toggle">
+      <label for="dark-toggle"></label>
+      <img src="/images/moon.png" alt="Ícono del sol" srcset="">
+    </div>
+    
+    <!-- <button class="toggle">Toggle</button> -->
+    <div>
+      <img src="/images/developer.svg" alt="Ilustración de una persona programando" height="300" srcset="">
+      <h1 class="title">Uriel Hernández</h1>
+      <p class="subtitle">Frontend Dev Jr.</p>
+      
+      <button>Ir a los proyectos</button>
+    </div>
   </header>
   <section>
     <div class="main-container padding-y-100">
@@ -34,5 +46,15 @@
       </article>
     </div>
   </section>
+  <section>
+    <div>
+      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+  </section>
+  <script src="/javascripts/main.js"></script>
 </body>
 </html>
